--- a/src/_components/aboutushead.njk
+++ b/src/_components/aboutushead.njk
@@ -589,16 +589,10 @@
         </a>
       </div>
       <div class="videoContainer">
-        {# <iframe
-            src="https://res.cloudinary.com/duji5kfeq/video/upload/c_crop,e_volume:0,f_auto/v1705361785/IMG_6659_krmehh.mov"
-            width="360"
-            height="600"
-            style="height: 100%; width: auto; aspect-ratio: 360 / 640;"
-            allow="fullscreen; encrypted-media; picture-in-picture"
-            allowfullscreen
-            frameborder="0"
-            ></iframe>
-        <img class="dotsImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/cw3.svg" style="z-index: -1;"> #}
+        <video loop autoplay controls="true" width='100%' height='100%' src='https://res.cloudinary.com/duji5kfeq/video/upload/c_crop,e_volume:0,f_auto/v1705361785/IMG_6659_krmehh.mov' type='video/mp4'></video>
+
+      
+        <img class="dotsImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/cw3.svg" style="z-index: -1;">
       </div>
     </div>
   </div>
