--- a/src/housing.njk
+++ b/src/housing.njk
@@ -30,6 +30,7 @@
 						</div>
 					</div>
 					{% include "./_components/sidebar.njk" %}
+					{% include "./_components/callnow.njk" %}
 
 		{% include "./javascript.njk" %}
 
