--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -169,6 +169,8 @@
 					</div>
 
 				{% include "./_components/sidebar.njk" %}
+				{% include "./_components/callnow.njk" %}
+
 
 			</div>
 		<!-- Scripts -->
