--- a/src/index.njk
+++ b/src/index.njk
@@ -170,7 +170,7 @@
 					</div>
 
 					{% include "./_components/sidebar.njk" %}
-					{# {% include "./_components/callnow.njk" %} #}
+					{% include "./_components/callnow.njk" %}
 			</div>
 
 		{% include "./javascript.njk" %}
