--- a/src/counseling.njk
+++ b/src/counseling.njk
@@ -25,6 +25,8 @@
 						</div>
 					</div>
 					{% include "./_components/sidebar.njk" %}
+					{% include "./_components/callnow.njk" %}
+
 
 		{% include "./javascript.njk" %}
 
