--- a/src/_components/callnow.njk
+++ b/src/_components/callnow.njk
@@ -59,7 +59,7 @@
     }
 
     #callButton, #textButton {
-     color: black; !important;
+     color: black; !very important;
     }
   </style>
 </head>
@@ -77,6 +77,7 @@
       <p>Choose an option:</p>
       <button id="callButton" onclick="makeCall()">Make a Call</button>
       <button id="textButton" onclick="sendText()">Send a Text</button>
+      <div style="margin-top: 14px;"> 801-989-6386</div>
     </div>
   </div>
 
@@ -88,6 +89,14 @@
     function closeModal() {
       document.getElementById('modal').style.display = 'none';
     }
+
+
+  function closeOnClickOutside(event) {
+    var modal = document.getElementById('modal');
+    if (modal.style.display === 'flex' && !modal.contains(event.target) && event.target !== document.getElementById('callOrText')) {
+      closeModal();
+    }
+  }
 
     function makeCall() {
       // Link to make a phone call
