--- a/src/index.njk
+++ b/src/index.njk
@@ -80,7 +80,7 @@
 										</span> </p>
 										
 										<div class="actions">
-											<a class="call-button" href="tel:801-989-6386">
+											<a class="call-button" onclick="openModal()">
 												<i class="fas fa-phone-alt"></i>
 												Call or Text
 											</a>
