--- a/src/_components/header.njk
+++ b/src/_components/header.njk
@@ -4,15 +4,17 @@
 
 </style>
 									<header id="header">
-									<img src="/assets/images/Logo.png" alt="logo heart with rays" style="max-height: 4rem; max-width: 10rem;"><a href="index.html" class="logo"><strong></strong></a>
-									<ul class="icons">
+										<a href="https://www.brighteradoption.com" style="text-decoration: none; border: 0;">
+											<img src="/assets/images/Logo.png" alt="logo heart with rays" style="max-height: 4rem; max-width: 10rem;" class="logo">
+										  </a>
+																			  <ul class="icons">
 										<!-- Twitter -->
 										<li><a href="#" class="icon brands fab fa-twitter" aria-label="Twitter"><span class="label">Twitter</span></a></li>
 										<!-- Facebook -->
 										<li><a href="https://www.facebook.com/brighteradoptions/" class="icon brands fab fa-facebook-f" aria-label="Facebook"><span class="label">Facebook</span></a></li>
 
 										<!-- Snapchat -->
-										<li><a href="#" class="icon brands fab fa-snapchat-ghost" aria-label="Snapchat"><span class="label">Snapchat</span></a></li>
+										{# <li><a href="#" class="icon brands fab fa-tiktok" aria-label="Snapchat"><span class="label">Snapchat</span></a></li> #}
 
 										<!-- Instagram -->
 										<li><a href="https://www.instagram.com/brighter_adoptions/?hl=en" class="icon brands fab fa-instagram" aria-label="Instagram"><span class="label">Instagram</span></a></li>
