--- a/src/_components/housing.njk
+++ b/src/_components/housing.njk
@@ -232,7 +232,7 @@
     <div class="where">
       <div class="hero-split">
         <p class="margin-bottom-24px">At Brighter Adoptions we want to help our expectant mothers have a safe and comfortable place to live throughout the adoption process.  Brighter Adoptions has multiple apartments available for those who need a safe and stable living environment. If you have children coming with you, you are able to enroll them in the local public schools during your stay.<br><br><br><br></p>
-        <a href="#" class="button-primary w-button">Get Help Now</a>
+        <a  onclick="openModal()" class="button-primary w-button">Get Help Now</a>
       </div>
       <div class="hero-split"><img src="/assets/images/pool.png" style="max-width: 100%;"></div>
     </div>
