--- a/src/_components/header.njk
+++ b/src/_components/header.njk
@@ -14,7 +14,7 @@
 										<li><a href="https://www.facebook.com/brighteradoptions/" class="icon brands fab fa-facebook-f" aria-label="Facebook"><span class="label">Facebook</span></a></li>
 
 										<!-- Snapchat -->
-										{# <li><a href="#" class="icon brands fab fa-tiktok" aria-label="Snapchat"><span class="label">Snapchat</span></a></li> #}
+										{# <li><a href="#" class="icon brands fab fa-tiktok" aria-label="Tiktok"><span class="label">TikTok</span></a></li> #}
 
 										<!-- Instagram -->
 										<li><a href="https://www.instagram.com/brighter_adoptions/?hl=en" class="icon brands fab fa-instagram" aria-label="Instagram"><span class="label">Instagram</span></a></li>
