--- a/src/index.njk
+++ b/src/index.njk
@@ -88,7 +88,7 @@
 									</div>
 								</div>
 								<span class="image object">
-									<img src="https://res.cloudinary.com/duji5kfeq/image/fetch/c_scale,dl_2,fl_progressive.progressive:steep,h_768,q_auto/f_webp/https://brighteradoption.com/assets/images/pic300.jpg" alt="two women holding a child" />
+									<img src="/assets/images/pic300.jpg" alt="two women holding a child" />
 								</span>
 							</section>
 
