--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
 <!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+ -->
 <html lang="en">
 	<head>
-		<img href=""> <title>Expectant Mothers</title>
+		   <title>Expectant Mothers</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="all">
 
@@ -50,30 +47,41 @@
 				<!-- Main -->
 					<div id="main">
 						 <!--inner-->
-						<div class="inner" style="margin: 1rem;">
+						<div class="inner" style="">
 
 							{% include "./_components/header.njk" %}
 		
 
 
-								<section style="margin-top: 3rem; padding: 2rem;">
-									<header class="minor">
-										<h2 id="">Placing a Child for Adoption?</h2>
+								<section style="margin-top: 3rem; padding: 0rem;">
+									{% include "./_components/aboutushead.njk"%}
+									
+									<header class="major">
+										<h2 id="">Let Me Introduce Myself</h2>
 									</header>										
 								
-											<p>Let me introduce myself, my name is Sandi Quick. I am the director of Brighter Adoptions, Inc., a licensed child-placing agency in the State of Utah. I have been involved in adoptions for twenty-two years and have loved every minute of it. It is my passion to build families through adoptions and to provide loving service to expectant mothers desiring an adoption plan.</p>
-											<p>I can’t imagine being in the situation that you are. It must be terrifying to feel like the decision you are about to make involves complete and total strangers. Besides not knowing me personally, you haven’t yet met the family you will choose to adopt your child. All of these are huge things to be dealing with on top of an unplanned pregnancy and whatever else may be going on in your personal life. You may be wondering…</p>
-											<div class="row">
+											<p>My name is Sandi Quick. I am the director of Brighter Adoptions, a licensed child-placing agency in the State of Utah. I have been involved in adoptions for twenty-two years and have loved every minute of it. It is my passion to build families through adoptions and to provide loving service to expectant mothers desiring an adoption plan.</p>
+											<p>I can’t imagine being in the situation that you are. It must be terrifying to feel like the decision you are about to make involves complete and total strangers. Besides not knowing me personally, you haven’t yet met the family you will choose to adopt your child. All of these are huge things to be dealing with on top of an unplanned pregnancy and whatever else may be going on in your personal life. </p>
+											
+											
+											<header class="major">
+												
+												<h2 id="">Why Choose Brighter Adoption</h2>
+											</header>
+											<p>I have worked with birth mothers for years and years and I honestly mean it when I say, they are some of my favorite people. I have never been more in awe of the character, strength, courage, bravery and grace that one human can possess. There is no greater act of love than to put that tiny one’s needs above your own desires.
+											</p> <p>I am an adoptive mother myself and simply cannot imagine my life or family without my children in it. The birth mother’s of my children are truly incredible people. I am in awe of their strength, wisdom, and grace. Because of these women’s selfless actions, I am privileged to have and raise these beautiful people and provide opportunities for them that their first mothers were not able to at the time of their births. I have a deep and loving respect for these women. We honor them and speak of them in loving and positive ways. None of my children feel they were, “abandoned” or “not wanted,” they feel they were CHOSEN.</p>
+							
+											{# <div class="row">
 											<ul>
 												<li>How do I know who to trust?</li>
 												<li>How will I know which family to choose?</li>
 												<li>How will I know which agency to work with?
 												</li>
 											</ul>
-											</div>
+											</div> #}
 
 										<header class="Major" style="">
-											<h2>Birth Mother Experiences</h2>
+											<h2>Hear From Our Moms</h2>
 										</header>										
 										<section>
 										
@@ -81,7 +89,7 @@
 										</section>
 
 										<header class="minor">
-											<h2 id="">Do you find yourself always questioning if you are even making the right decision?
+											<h2 id="">Do you find yourself questioning if you are making the right decision?
 											</h2>
 										</header>										
 											<div>
@@ -127,14 +135,7 @@
 												</div>
 												</div>
 												<!-- Break -->
-												<header class="major">
-													<h2 id="">Why Choose Brighter Adoption</h2>
-												</header>		
-												
-												<p>I have worked with birth mothers for years and years and I honestly mean it when I say, they are some of my favorite people. I have never been more in awe of the character, strength, courage, bravery and grace that one human can possess. There is no greater act of love than to put that tiny one’s needs above your own desires.
-
-												</p> <p>I am an adoptive mother myself and simply cannot imagine my life or family without my children in it. The birth mother’s of my children are truly incredible people. I am in awe of their strength, wisdom, and grace. Because of these women’s selfless actions, I am privileged to have and raise these beautiful people and provide opportunities for them that their first mothers were not able to at the time of their births. I have a deep and loving respect for these women. We honor them and speak of them in loving and positive ways. None of my children feel they were, “abandoned” or “not wanted,” they feel they were CHOSEN.</p>
-									</section>
+													</section>
 
 									</section>
 									
@@ -144,7 +145,7 @@
 
 
 								<section>
-									<h2>Birth Mother Experiences</h2>
+									<h2>Read Our Thoughts</h2>
 									<div class="posts">
 										{% set count = 0 %}
 										{% for post in collections.blogPosts | reverse %}
