--- a/src/about.njk
+++ b/src/about.njk
@@ -21,7 +21,7 @@
 							{% include "./_components/header.njk" %}
 
 							<!--CONTENT-->
-							{%include "./_components/aboutushead.njk"%}
+							{# {%include "./_components/aboutushead.njk"%} #}
 							
 							{%include "./_components/ourteam.njk"%}
 							{# <header class="major">
@@ -65,7 +65,7 @@
 
 		<!-- Scripts -->					
 		
-		{% include "./javascript.njk" %}
+		{% include "./_components/rawscripts.njk" %}
 
 
 	</body>
