--- a/src/adoptivefamilies.njk
+++ b/src/adoptivefamilies.njk
@@ -173,8 +173,8 @@
 									<h1>Looking to Adopt a Baby?</h1>
 									<p class="margin-bottom-24px">At Brighter Adoptions, our sole focus is on expectant mothers, therefore we don’t work directly with adoptive parents. Below is a consulting agency we recommend and work with on a regular basis. If you are looking to adopt, please call<br></p>
 									<div class="div-block-2">
-									  <a href="#" class="button-primary w-button">Schedule a call</a>
-									  <a href="#" class="button-primary w-button">Email FAC</a>
+									  <a href="https://www.faithfuladoptionconsultants.com/schedule-a-call" class="button-primary w-button">Schedule a call</a>
+									  <a href="mailto:ask@facadopts.com" class="button-primary w-button">Email FAC</a>
 									</div><img src="/assets/images/FAC.jpeg"  class="image-2">
 								  </div>
 								</div>
@@ -195,13 +195,8 @@
 
 			</div>
 
-		{% include "./javascript.njk" %}
-		
-		{# <script src= "/jquery.min.js"></script>
-		<script src= "/breakpoints.min.js"></script>
-		<script src= "/browser.min.js"></script>
-		<script src= "/main.js"></script>
-		<script src= "/util.js"></script> #}
+      {% include "./_components/rawscripts.njk" %}
+
 
 	</body>
 </html>
