--- a/src/counseling.njk
+++ b/src/counseling.njk
@@ -28,7 +28,7 @@
 					{% include "./_components/callnow.njk" %}
 
 
-		{% include "./javascript.njk" %}
+					{% include "./_components/rawscripts.njk" %}
 
 	</body>
 </html>
