--- a/src/housing.njk
+++ b/src/housing.njk
@@ -29,7 +29,7 @@
 					{% include "./_components/sidebar.njk" %}
 					{% include "./_components/callnow.njk" %}
 
-		{% include "./javascript.njk" %}
+					{% include "./_components/rawscripts.njk" %}
 
 	</body>
 </html>
