--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -133,11 +133,8 @@
 
 		<!-- Scripts -->
 			
-			<script src="jquery.min.js"></script>
-			<script src="browser.min.js"></script>
-			<script src="breakpoints.min.js"></script>
-			<script src="util.js"></script>
-			<script src="main.js"></script>
+		{% include "src/_components/rawscripts.njk" %}
+
 
 
 	</body>
