--- a/src/index.njk
+++ b/src/index.njk
@@ -170,13 +170,17 @@
 					{% include "./_components/callnow.njk" %}
 			</div>
 
-		{% include "./javascript.njk" %}
-		
-		{# <script src= "/jquery.min.js"></script>
-		<script src= "/breakpoints.min.js"></script>
-		<script src= "/browser.min.js"></script>
-		<script src= "/main.js"></script>
-		<script src= "/util.js"></script> #}
-
+		{% include "./_components/rawscripts.njk" %}
+		<script defer>
+			if (window.netlifyIdentity) {
+			  window.netlifyIdentity.on("init", user => {
+				if (!user) {
+				  window.netlifyIdentity.on("login", () => {
+					document.location.href = "/admin/";
+				  });
+				}
+			  });
+			}
+		  </script>
 	</body>
 </html>
