--- a/src/housing.njk
+++ b/src/housing.njk
@@ -3,9 +3,11 @@
  -->
 <html lang="en">
 	<head>
-		<title>Brighter Home</title>
+		<title>Housing Support</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="all">
+		<meta name="description" content="We have 1,2 and 3 bedroom apartments available depending on your needs.">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
