--- a/src/adoptivefamilies.njk
+++ b/src/adoptivefamilies.njk
@@ -3,9 +3,11 @@
  -->
 <html lang="en">
 	<head>
-		<title>Brighter Home</title>
+		<title>We Only Serve Birth Mothers</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="all">
+    <meta name="description" content="While we don't work with adoptive families, we can point you in the right direction!">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
