--- a/src/counseling.njk
+++ b/src/counseling.njk
@@ -1,9 +1,11 @@
 
 <html lang="en">
 	<head>
-		<title>Brighter Housing</title>
+		<title>Counseling Support</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="all">
+		<meta name="description" content="We offer free counseling so you can choose the best decision for you.">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
