--- a/src/index.njk
+++ b/src/index.njk
@@ -3,10 +3,11 @@
  -->
 <html lang="en">
 	<head>
-		<title>Brighter Home</title>
+		<title>Brighter Adoptions - Licensed Child Placing Agency For Expectant Moms</title>
 		<meta charset="utf-8" />
 		<meta name="robots" content="all">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+		<meta name="description" content="Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.">
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
 <style>
