--- a/src/_components/counseling.njk
+++ b/src/_components/counseling.njk
@@ -213,7 +213,7 @@
         <h1 class="heading-2">Counseling &amp Grief Support</h1>
 
         <p class="margin-bottom-24px">Brighter Adoptions offers counseling to all clients.  If you desire counseling through the adoption process, it is available to you.  Your counselor will assess your reasons for placement and will ensure you have been explained your rights as a parent, the alternatives to adoption, and difficulties surrounding adoption including feelings of grief and loss. <br><br><br><br></p>
-        <a href="#" class="button-primary w-button">Get Help Now</a>
+        <a onclick="openModal()" class="button-primary w-button">Get Help Now</a>
       </div>
       <div class="hero-split"><img src="/assets/images/counseling.jpeg" style="max-width: 100%;"></div>
     </div>
