--- a/src/_components/contactus.njk
+++ b/src/_components/contactus.njk
@@ -83,7 +83,7 @@ font-family: 'Quicksand' !important;
                 </div>
                 <div class="recent-birth-date" style="display: none;">
                     <label for="due-date">My baby was born</label>
-                    <input type="date" id="due-date" name="due-date">
+                    <input type="date" id="birth-date" name="birth-date">
                 </div>
                 <label for="looking">and I have questions about</label>
                 <input type="looking" id="looking" name="looking" placeholder="Ask us anything!">
