--- a/src/_components/contactus.njk
+++ b/src/_components/contactus.njk
@@ -67,6 +67,7 @@ font-family: 'Quicksand' !important;
 
         <div class="contact-container">
             <h2>Let's talk!</h2>
+            <a id="contactus"></a>
             <form name="contact" netlify>
                 <label for="name">Hi, Sandi! My name is</label>
                 <input type="text" id="name" name="name" placeholder="Type here" oninput="updateGreeting()">
