--- a/src/_components/counseling.njk
+++ b/src/_components/counseling.njk
@@ -193,6 +193,24 @@
   .image-2 {
     display: block;
   }
+
+  .where {
+    flex-direction: column-reverse;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+  }
+
+  .heading-2 {
+    display: none;
+  }
+
+  .memo {
+    display: none;
+  }
 }
 }
 
@@ -205,7 +223,7 @@
     <div class="div-block-2">
       <div class="div-block">
         <h1 class="heading-2">What is right for you?</h1>
-        <p class="margin-bottom-24px"> Adoption is not easy, but we hope to make it easier for you. We do not want anyone to make such a difficult decision on impulse and will never pressure you. Our counselors are there to ensure you make the best decision for you. We strongly believe counseling is the best way to ensure you have all the tools to make the most appropriate decision for yourself and your baby.<a href="#"><strong><br></strong></a><br><br><br></p>
+        <p class="margin-bottom-24px memo"> Adoption is not easy, but we hope to make it easier for you. We do not want anyone to make such a difficult decision on impulse and will never pressure you. Our counselors are there to ensure you make the best decision for you. We strongly believe counseling is the best way to ensure you have all the tools to make the most appropriate decision for yourself and your baby.<a href="#"><strong><br></strong></a><br><br><br></p>
       </div>
     </div>
     <div class="where">
