--- a/src/index.njk
+++ b/src/index.njk
@@ -10,25 +10,25 @@
 		<meta name="description" content="Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.">
 		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<link rel="stylesheet" href="/assets/css/main.css">	</head>
-		<script type="application/ld+json">
-			{
-			  "@context": "https://schema.org",
-			  "@type": "FAQPage",
-			  "mainEntity": [
-				{% for post in collections.faq %}
-				{
-				  "@type": "Question",
-				  "name": {{ post.data.title | json }},
-				  "acceptedAnswer": {
-					"@type": "Answer",
-					"text": {{ post.content | json }}
-				  }
-				}{% unless loop.last %},{% endunless %}
-				{% endfor %}
-			  ]
-			}
-		  </script>
-		</head>
+		{# <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {% for post in collections.faq %}
+        {
+          "@type": "Question",
+          "name": "{{ post.data.title | escape }}",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "{{ post.content | strip_html | escape }}"
+          }
+        }{% unless forloop.last %},{% endunless %}
+        {% endfor %}
+      ]
+    }
+  </script> #}
+</head>
 <style>
 
 .image-container {
@@ -156,30 +156,10 @@
 								</section>
 
 									<!-- Section -->
-									<section>
-										<header class="major">
-										  <h2>Read our thoughts</h2>
-										</header>
-										<div class="posts">
-										  {% set count = 0 %}
-										  {% for post in collections.blogPosts | reverse %}
-											{% if count < 4 and post.data.tags.includes("featured")%}
-											  <article>
-												<a href="{{ post.url }}" class="image" style="max-height: 40%;">
-												  <img src="{{ post.data.thumbnail }}" aria-label="{{post.data.title}}">
-												</a>
-												<h3>{{ post.data.title }}</h3>
-												<p>{{ post.data.excerpt }}</p>
-												<ul class="actions">
-												
-												  <li><a href="{{ post.url }}" aria-label="Read article {{post.data.title}}" class="button ">Read Now</a></li>
-												</ul>
-											  </article>
-											  {% set count = count + 1 %}
-											{% endif %}
-										  {% endfor %}
-										</div>
-									  </section>
+
+									{% include "./_components/blogpreview.njk" %}
+									{% include "./_components/blogribbon.njk" %}
+
 									  
 
 
