--- a/src/_components/sidebar.njk
+++ b/src/_components/sidebar.njk
@@ -70,17 +70,19 @@
 								<ul>
 									<li><a href="/index">Homepage</a></li>
 									<li><a href="/expectantmothers">Expectant Mothers</a></li>
+									<li><a href="/housing">Housing</a></li>
+
 									<li><a href="/about">About Us</a></li>
 
 
-									<li>
+									{# <li>
 										<span class="opener">Services</span>
 										<ul>
 											<li><a href="/housing">Housing</a></li>
-											{# <li><a href="/medical">Medical</a></li> #}
+											<li><a href="/medical">Medical</a></li>
 											<li><a href="/counseling">Counseling Services</a></li>
 										</ul>
-									</li>
+									</li> #}
 									<li><a href="/blog">blog</a></li>
 
 								</ul>
