--- a/src/_components/blog.njk
+++ b/src/_components/blog.njk
@@ -1,295 +1,10 @@
-<style>
-  /* @import url('https://fonts.googleapis.com/css?family=Inter:100,200,300,400,500,600,700,800,900&display=swap');  */
- 
+---
+pagination:
+  data: collections.blogPosts
+  size: 5
+  alias: posts
+---
 
-section { 
-    display: block;
-} 
-
-.is-relative { 
-    position: relative !important;
-} 
-
-.py-20 { 
-    padding-top: 5rem !important; 
-    padding-bottom: 5rem !important;
-} 
-
-.section { 
-    padding: 3rem 1.5rem;
-} 
-
-.is-relative { 
-    position: relative;
-} 
-
-*,:before,:after { 
-    box-sizing: inherit;
-} 
-
-img { 
-    height: auto; 
-    max-width: 100%;
-} 
-
-.mt-24 { 
-    margin-top: 6rem !important;
-} 
-
-.is-absolute { 
-    position: absolute;
-} 
-
-.is-top-0 { 
-    top: 0;
-} 
-
-.is-left-0 { 
-    left: 0;
-} 
-
-.mt-52 { 
-    margin-top: 13rem !important;
-} 
-
-.is-right-0 { 
-    right: 0;
-} 
-
-.container { 
-  transform: scale(.8rem);
-  padding: 10px;
-    flex-grow: 1; 
-    margin: 0 auto; 
-    position: relative; 
-    width: auto;
-} 
-
-@media screen and (min-width: 1024px){ 
-  .container { 
-    max-width: 960px;
-  } 
-}     
-
-@media screen and (min-width: 1216px){ 
-  .container:not(.is-max-desktop) { 
-    max-width: 1088px;
-  } 
-}     
-
-@media screen and (min-width: 1408px){ 
-  .container:not(.is-max-desktop):not(.is-max-widescreen) { 
-    max-width: 1088px;
-  } 
-}     
-
-.mx-auto { 
-    margin-left: auto !important; 
-    margin-right: auto !important;
-} 
-
-.mb-20 { 
-    margin-bottom: 5rem !important;
-} 
-
-.has-text-centered { 
-    text-align: center !important;
-} 
-
-.has-mw-2xl { 
-    max-width: 42rem;
-} 
-
-.columns { 
-    margin-left: -.75rem; 
-    margin-right: -.75rem; 
-    margin-top: -.75rem;
-} 
-
-.columns:last-child { 
-    margin-bottom: -.75rem;
-} 
-
-.columns.is-multiline { 
-    flex-wrap: wrap;
-} 
-
-@media screen and (min-width: 769px), print{ 
-  .columns:not(.is-desktop) { 
-    display: flex;
-  } 
-}     
-
-span { 
-    font-style: inherit; 
-    font-weight: inherit;
-} 
-
-.is-size-7 { 
-    font-size: 1rem !important;
-} 
-
-h2 { 
-    margin: 0; 
-    padding: 0;
-} 
-
-h2 { 
-    font-size: 100%; 
-    font-weight: normal;
-} 
-
-.title { 
-    word-break: break-word;
-} 
-
-.title { 
-    color: #0A2463; 
-    font-size: 2.25rem; 
-    font-weight: 600; 
-    line-height: 1.125;
-} 
-
-.mt-8 { 
-    margin-top: 2rem !important;
-} 
-
-.mb-10 { 
-    margin-bottom: 2.5rem !important;
-} 
-
-.title:not(:last-child) { 
-    margin-bottom: 1.5rem;
-} 
-
-.title.is-2 { 
-    font-size: 3rem;
-} 
-
-p { 
-    margin: 0; 
-    padding: 0;
-} 
-
-.has-text-grey-dark { 
-    color: #838EA4 !important;
-} 
-
-.is-size-5 { 
-    font-size: 1.25rem !important;
-} 
-
-.column { 
-    display: block; 
-    flex-basis: 0; 
-    flex-grow: 1; 
-    flex-shrink: 1; 
-    padding: .75rem;
-} 
-
-.mb-16 { 
-    margin-bottom: 4rem !important;
-} 
-
-@media screen and (min-width: 769px), print{ 
-  .column.is-8 { 
-    flex: none; 
-    width: 66.66667%;
-  } 
-
-  .column.is-4 { 
-    flex: none; 
-    width: 33.33333%;
-  } 
-}     
-
-@media screen and (min-width: 1024px){ 
-  .mb-0-desktop { 
-    margin-bottom: 0px !important;
-  } 
-}     
-
-small { 
-    font-size: .875em;
-} 
-
-.has-text-info { 
-    color: #45C1FF !important;
-} 
-
-.has-text-weight-semibold { 
-    font-weight: 600 !important;
-} 
-
-.mb-4 { 
-    margin-bottom: 1rem !important;
-} 
-
-.is-inline-block { 
-    display: inline-block !important;
-} 
-
-.title.is-3 { 
-    font-size: 2.25rem;
-} 
-
-.mb-8 { 
-    margin-bottom: 2rem !important;
-} 
-
-a { 
-    color: #ff9645; 
-    cursor: pointer; 
-    text-decoration: none;
-} 
-
-.is-size-6 { 
-    font-size: 1.125rem !important;
-} 
-
-a:hover { 
-    color: #FF1F44;
-} 
-
-.image { 
-    display: block; 
-    position: relative;
-} 
-
-.is-cover { 
-    object-fit: cover;
-} 
-
-.is-rounded { 
-    border-radius: .5rem;
-} 
-
-.image.is-fullwidth { 
-    width: 100%;
-} 
-
-
-/* These were inline style tags. Uses id+class to override almost everything */
-#style-STMMY.style-STMMY {  
-   overflow: hidden;  
-}  
-#style-YMUm2.style-YMUm2 {  
-   height:400px;  
-}  
-#style-koYgp.style-koYgp {  
-   height:400px;  
-}  
-#style-xCpnU.style-xCpnU {  
-   height:400px;  
-}  
-#style-gfzo7.style-gfzo7 {  
-   height:400px;  
-}  
-#style-PO8F4.style-PO8F4 {  
-   height:400px;  
-}  
-
-</style>
 
 <section data-section-id="1" data-share="" data-category="blog" data-component-id="2d4a0295_01_awz" class="is-relative section py-20 snipcss-kdSzP style-STMMY" id="style-STMMY">
 
@@ -298,7 +13,7 @@ a:hover {
   <div class="container">
    
     {# newest blog post gets this styling #}
-    {% for post in collections.blogPosts %}
+    {% for post in posts %}
     {% if loop.index == 1 %}
 
     <div class="columns is-multiline">
@@ -309,7 +24,7 @@ a:hover {
           </a>
         </div>
         <span class="is-inline-block mb-4 has-text-grey-dark" data-config-id="date1">
-          {{ post.data.date | customDateFormat("medium") }}
+          {{ post.data.date | customDateFormat("medium") }}{{post.data.tags}}
         </span>
         <h2 class="mb-4 title is-3" data-config-id="{{ post.data.title }}">
           {{ post.data.title }}
@@ -345,6 +60,18 @@ a:hover {
       </div>
       {% endif %}
       {% endfor %}
+
+      <div class="pagination">
+        {% if blog.href.previous %}
+          <a href="{{ blog.href.previous }}">Previous Page</a>
+        {% endif %}
+  
+        Page {{ blog.pageNumber }} of {{ blog.totalPages }}
+  
+        {% if blog.href.next %}
+          <a href="{{ blog.href.next }}">Next Page</a>
+        {% endif %}
+      </div>
 
     </div>
   </div>
