change discriptive text for adopting families link in contact us module

--- a/src/_components/contactus.njk
+++ b/src/_components/contactus.njk
@@ -96,7 +96,7 @@ font-family: 'Quicksand' !important;
                 <input type="submit" value="Send message!" id="submitBtn">
                 <div id="familyDiv" style="display:none;">
                     <p id="adoptingFamiliesMsg" style="">Thank you for your interest <span id="FamGreetingName"></span>! We don't work with adoptive families, but we can point you in the right direction! <br><br> Click below to learn more about adopting families.</p>
-                    <a class="button" style="color: black;" href="/adoptivefamilies" id="adoptingFamiliesLink"> Learn More</a>
+                    <a class="button" style="color: black;" href="/adoptivefamilies" id="adoptingFamiliesLink"> Adopt a Baby</a>
                 </div>
             </form>
         </div>
