updated form name

--- a/src/index.njk
+++ b/src/index.njk
@@ -269,9 +269,9 @@
 									<h2>Get Help Now</h2>
 								</header>
 								<div class="simplified-contact">
-									<form name="contact" netlify class="contact-form-simple">
+									<form name="contactV2" netlify class="contact-form-simple">
 										<!-- Hidden field for Netlify form handling -->
-										<input type="hidden" name="form-name" value="contact" />
+										<input type="hidden" name="form-name" value="contactV2" />
 										
 										<div class="form-row">
 											<div class="form-group">
