add location specific pages

--- a/src/_layouts/landingAlt.njk
+++ b/src/_layouts/landingAlt.njk
@@ -270,6 +270,9 @@
 				display: inline-flex;
 				align-items: center;
 				gap: 0.5rem;
+				max-width: 300px;
+				min-width: 200px;
+				justify-content: center;
 			}
 			
 			.cta-buttons .button.primary {
