--- a/src/location-blog.njk
+++ b/src/location-blog.njk
@@ -73,6 +73,9 @@ permalink: "/location-blog/"
 	white-space: nowrap;
 	box-shadow: 0 1px 3px rgba(245,191,80,0.04);
 	margin-top: 0.3rem;
+	max-width: 140px;
+	min-width: 90px;
+	text-align: center;
 }
 
 /* Brick effect: stagger every other filter in a row */
@@ -189,8 +192,8 @@ permalink: "/location-blog/"
 @media (max-width: 600px) {
 	.location-filter {
 		display: block;
-		width: 70px;
-		min-width: 64px;
+		width: 90px;
+		min-width: 80px;
 		margin-bottom: 0.6rem;
 		font-size: 0.93rem;
 		padding: 0.4rem 0.5rem;
@@ -221,6 +224,9 @@ permalink: "/location-blog/"
 		padding: 0.5rem 1rem;
 		margin-bottom: 0.5rem;
 		border-radius: 25px;
+		max-width: 140px;
+		min-width: 90px;
+		text-align: center;
 	}
 }
 
