--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -10,6 +10,20 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
+	/* Honeypot field styles to prevent spam */
+	.hidden {
+		display: none !important;
+		position: absolute !important;
+		left: -9999px !important;
+		width: 1px !important;
+		height: 1px !important;
+		opacity: 0 !important;
+		pointer-events: none !important;
+		z-index: -1 !important;
+		clip: rect(0 0 0 0) !important;
+		clip-path: inset(50%) !important;
+	}
+
 	label {
 		color: _palette(fg-bold);
 		display: block;
@@ -88,7 +102,7 @@
 	}
 
 	input[type="checkbox"],
-	input[type="radio"], {
+	input[type="radio"] {
 		@include vendor('appearance', 'none');
 		display: block;
 		float: left;
