--- a/src/_components/contactForm.njk
+++ b/src/_components/contactForm.njk
@@ -4,9 +4,16 @@
 		<h2>Get Help Now</h2>
 	</header>
 	<div class="simplified-contact">
-		<form name="contactV2" netlify class="contact-form-simple">
+		<form name="contactV2" netlify netlify-honeypot="bot-field" class="contact-form-simple">
 			<!-- Hidden field for Netlify form handling -->
 			<input type="hidden" name="form-name" value="contactV2" />
+			
+			<!-- Honeypot field to prevent spam -->
+			<p class="hidden">
+				<label>
+					Don't fill this out if you're human: <input name="bot-field" type="text" />
+				</label>
+			</p>
 			
 			<div class="form-row">
 				<div class="form-group">
