Add custom success page redirect to all contact forms

--- a/src/_components/contactForm.njk
+++ b/src/_components/contactForm.njk
@@ -4,7 +4,7 @@
 		<h2>Get Help Now</h2>
 	</header>
 	<div class="simplified-contact">
-		<form name="contactV2" netlify netlify-honeypot="bot-field" class="contact-form-simple">
+		<form name="contactV2" action="/submittedformblogview" method="POST" netlify netlify-honeypot="bot-field" class="contact-form-simple">
 			<!-- Hidden field for Netlify form handling -->
 			<input type="hidden" name="form-name" value="contactV2" />
 			
@@ -52,4 +52,4 @@
 			</div>
 		</form>
 	</div>
-</section> 
+</section>
